# swe1r-patcher

./: CMakeLists.txt  README.md  appveyor.yml  dinput.def  font0_0_test.data  font1_0_test.data  font1_1_test.data  font1_2_test.data  font4_0_test.data  main.c
textures/: font1_0_test.data
